Fixed for non firefox svf logo color and rezising wrap

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -14,7 +14,8 @@ $color: #293972
     margin-left: 0
     margin-right: 0
     flex-direction: row
-
+    flex-wrap: wrap
+    
   #left-menu
     flex: 1 0 50px
     flex-direction: column
@@ -24,6 +25,7 @@ $color: #293972
     display: flex
     flex: 1 0 1000px
     flex-direction: column
+
 a
  color: $color
 
