--- a/src/app/layout/header/header.component.sass
+++ b/src/app/layout/header/header.component.sass
@@ -20,7 +20,8 @@ $color: #ffffff
   height: 2vw
   min-height: 26px
   vertical-align: middle
-
+  fill: $color
+  
 .top-menu
   flex: 0 0 auto
   width: auto
